# mdview

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  install.ps1  install.sh
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.github/workflows/: ci.yml  release.yml
crates/mdview/: Cargo.toml
crates/mdview-core/: Cargo.toml
crates/mdview-core/src/: config.rs  daemon.rs  domain.rs  engine.rs  error.rs  fuzzy.rs  indexer.rs  lib.rs  link_resolver.rs  process.rs  render.rs  repository.rs
crates/mdview-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/mdview-desktop/src/: main.rs
crates/mdview-desktop/ui/: index.html
crates/mdview/assets/: app.css  app.js
crates/mdview/assets/atelier/: atelier.css  components.css  contract.css  editorial.css  fonts.css
crates/mdview/src/: cli.rs  doctor.rs  main.rs  mcp.rs  runtime.rs  server.rs  views.rs  watch.rs
crates/mdview/tests/: e2e_open.rs
docs/: backlog.md  mdview-agents-template.md  mdview-skill-template.md  mermaid-demo.md  usage.md
docs/design/: AGENTS.md  README.md  styles.css
docs/design/contract/: CATALOG.md  catalog.json  components.css  elements.js  patterns.css
docs/design/contract/patterns/: crm.css  financial.css  media.css  task.css
docs/design/demo/: core.html  crm.html  demo.css  editorial.html  elements.html  financial.html  media.html  task.html  theme-switcher.js
docs/design/themes/: atelier.css
docs/distillery/: comparison-matrix.md  intake.md  porting-log.md  taxonomy.txt
docs/distillery/sources/: marky.md  mdserve.md
docs/history/adopt-atelier-design-system/: CONTEXT.md  plan.md
docs/history/adopt-atelier-design-system/reports/: atelier-css-2.md  atelier-css-3.md  atelier-css-4.md  atelier-css-5.md  atelier-css-6.md  atelier-css-7.md  validation-atelier-swap.md
docs/history/bundle-manrope-font/: plan.md
docs/history/daemon-auto-spawn-detach/: plan.md
docs/history/file-nav-ux/: plan.md
docs/history/fix-atelier-regressions/: plan.md
docs/history/fix-review-p1-findings-260716/: CONTEXT.md  approach.md  implement-plan.md  plan.md
docs/history/fix-review-p1-findings-260716/reports/: config-edit-cli-test-1.md  copy-as-markdown-test-1.md  mdview-restart-test-1.md  security-asset-allowlist-1.md  validation-slice1.md
docs/history/gitignore-bee-cleanup/reports/: gitignore-bee-cleanup-1.md
docs/history/gitignore-purge-bee-distill-history/: plan.md
docs/history/hostname-port-truth/: CONTEXT.md  plan.md
docs/history/hostname-port-truth/reports/: bound-port-truth-1.md  cli-mcp-url-parity-1.md  hostname-rename-1.md  validation-current-slice.md
docs/history/learnings/: 20260715-daemon-auto-spawn-detach.md  20260715-mdview-hostname-doctor-fix.md  20260716-adopt-atelier-design-system.md  20260716-fix-atelier-regressions.md  20260716-fix-review-p1-findings.md  20260716-hostname-port-truth.md  20260716-ui-polish-settings-sidebar.md  20260720-windows-daemon-fixes.md  critical-patterns.md
docs/history/mdview-hostname-doctor-fix/: plan.md
docs/history/polish-settings-form/: plan.md
docs/history/readme-agent-usage-example/reports/: readme-agent-usage-example-1.md
docs/history/release-v0.5.2/reports/: release-v0.5.2-1.md
docs/history/review-2026-07-16-full-app/reports/: findings-api-contract.md  findings-architecture.md  findings-code-quality.md  findings-reliability.md  findings-security.md  findings-test-coverage.md
docs/history/session-closeout-commits/reports/: session-closeout-commits-1.md
docs/history/ui-polish-settings-sidebar/: plan.md
docs/history/version-surface/: plan.md
docs/history/windows-daemon-fixes/: CONTEXT.md  plan.md
docs/history/windows-daemon-fixes/reports/: validation-1.md  windows-daemon-fixes-1.md  windows-daemon-fixes-2.md  windows-daemon-fixes-3.md  windows-daemon-fixes-4.md
docs/history/windows-installer-ps1-closeout/reports/: windows-installer-ps1-closeout-1.md
docs/history/windows-installer-ps1/reports/: windows-installer-ps1-1-and-2.md
docs/specs/: appearance.md  daemon.md  doctor.md  reading-map.md  settings.md  system-overview.md  web-interface.md
plans/: demo-video-guide.md
plans/260715-1835-mdview-mvp/: plan.md
plans/reports/: distill-mdserve-frontend-packaging-260715.md  distill-mdserve-rust-core-260715.md  distill-porting-recommendation-260715-1818-best-of-marky-mdserve-for-mdview-report.md  distill-scan-260715-1725-mdserve-learning-session-report.md  general-purpose-260715-1726-marky-render-inventory-report.md
