[workspace]
resolver = "2"
members = ["crates/mdview-core", "crates/mdview"]
# Desktop shell (Tauri) is excluded from the default workspace build because it
# requires system libraries (webkit2gtk/gtk3 on Linux) not present everywhere.
# Build it explicitly from its own directory — see crates/mdview-desktop/README.md.
exclude = ["crates/mdview-desktop"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Van Tran"]
repository = "https://github.com/vantt/mdview"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

# rendering
comrak = "0.29"
syntect = "5"
ammonia = "4"

# storage / indexing
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
notify = "6"
notify-debouncer-full = "0.3"
nucleo-matcher = "0.3"

# server / cli
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }

# platform
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
