[package]
name = "mdview-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
time.workspace = true
comrak.workspace = true
syntect.workspace = true
ammonia.workspace = true
rusqlite.workspace = true
ignore.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
nucleo-matcher.workspace = true
libc.workspace = true
