[package]
name = "mdview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
mdview-core = { path = "../mdview-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
time.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
clap.workspace = true
minijinja.workspace = true
