[package]
name = "mdview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
mdview-core = { path = "../mdview-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
time.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true

# setsid(2) for fully detaching the auto-spawned daemon (Unix only).
[target.'cfg(unix)'.dependencies]
libc.workspace = true
