[package]
name = "mdview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
mdview-core = { path = "../mdview-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
time.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
# Enumerate the machine's network interfaces to list every reachable IP when the
# daemon binds a wildcard host (0.0.0.0) — display-URL only, never connectivity.
if-addrs = "0.13"

# setsid(2) for fully detaching the auto-spawned daemon (Unix only).
[target.'cfg(unix)'.dependencies]
libc.workspace = true
